(env
 (static
  (flags
   (:standard -ccopt -static))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures)))
 (release
  (ocamlopt_flags
   (:standard -O3 -unbox-closures))))

(rule
 (target test.yml)
 (mode
  (promote
   (into .github/workflows)))
 (deps
  ./flake.nix
  ./flake.lock
  (source_tree ./nix))
 (action
  (progn
   (run
    nix
    eval
    --show-trace
    --raw
    "path:.#gh-actions.x86_64-linux"
    --write-to
    %{target})
   (bash "echo \"$(cat %{target} | jq -r)\" > %{target}"))))
