opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/piaf"
bug-reports: "https://github.com/anmonteiro/piaf/issues"
dev-repo: "git+https://github.com/anmonteiro/piaf.git"
doc: "https://anmonteiro.github.io/piaf/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.5"}
  "angstrom"
  "faraday"
  "bigstringaf" {>= "0.5.0"}
  "logs"
  "lwt"
  "conf-libssl"
  "ssl"
  "lwt_ssl"
  "mrmime"
  "peqcu"
  "psq"
  "uri"
  "magic-mime"
  "gluten-lwt-unix"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]
pin-depends: [
  [ "ssl.dev" "git+https://github.com/savonet/ocaml-ssl.git" ]
]
synopsis:
  "An HTTP library with HTTP/2 support written entirely in OCaml"
