(copy_files# stubs/*)

(library
 (name piaf)
 (public_name piaf)
 (libraries
  multipart
  h2
  h2-eio
  httpaf
  httpaf-eio
  websocketaf
  logs
  eio
  eio-ssl
  magic-mime
  ssl
  uri
  ipaddr
  piaf.sendfile
  piaf.stream)
 (foreign_stubs
  (language c)
  (names piaf_bigarray_read piaf_openssl_rand piaf_openssl_sha piaf_fdutils)))
