(copy_files# stubs/*)

(library
 (name piaf)
 (public_name piaf)
 (libraries
  multipart
  h2
  h2-eio
  httpun
  httpun-eio
  httpun-ws
  logs
  eio
  eio-ssl
  magic-mime
  ssl
  uri
  ipaddr
  piaf.sendfile
  piaf.stream)
 (foreign_stubs
  (language c)
  (names piaf_bigarray_read piaf_openssl_rand piaf_openssl_sha piaf_fdutils)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./cflags/cflags.exe)))
