(test
 (name test_cookies)
 (modules test_cookies)
 (libraries alcotest piaf))

(generate_sites_module
 (module cert_sites)
 (sourceroot))

(test
 (name test_client)
 (libraries alcotest piaf logs.fmt dune-site)
 (modules helper_server test_client cert_sites)
 (deps
  (source_tree "./certificates")))

(test
 (name test_response)
 (libraries alcotest piaf logs.fmt)
 (modules test_response))
