(executables
 (names lwt_get lwt_get_pipelined echo_server multipart_upload_server)
 (modules lwt_get lwt_get_pipelined echo_server multipart_upload_server)
 (libraries piaf logs logs.fmt fmt.tty multipart))

(executable
 (name echo_server_upgrade)
 (modules echo_server_upgrade)
 (libraries piaf digestif.c websocketaf))
